--- a/atv2/css.html
+++ b/atv2/css.html
@@ -5,20 +5,24 @@
             font-family: Arial, sans-serif;
             background: #f4f4f4;
             color: #000000;
-            margin: 20px;
+            margin: 0 auto;
+            max-width: 1000px;
         }
 
         h1 {
             color: darkblue;
             text-align: center;
+            font-size: 2.5em;
         }
 
         h2 {
+            color: #1e40af;
+            font-size: 1.8em;
             padding-top: 15px;
         }
 
         img {
-            width: 270px;
+            width: 310px;
             float: left;
             margin: 0 30px 10px 0;
         }
